--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-bom</artifactId>
+			<version>2021.1.4</version>
+			<scope>import</scope>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 
 	<build>
