--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./data/testdb
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.sql.init.schema-locations=classpath:database/schema.sql
+spring.sql.init.mode=always
