--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,26 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+server.port=8090
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./data/testdb
+############### TEST  ##############
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/carsdb
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+
+
+############### DEV   ##############
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:h2:mem:carsdb
+#spring.datasource.url=jdbc:h2:file:C://jome.clopez//carsdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.sql.init.schema-locations=classpath:database/schema.sql
-spring.sql.init.mode=always
+#para entrar desde un browser a http://localhost:8090/h2-console
+spring.h2.console.enabled=true
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
