--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,5 +23,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn sonar:sonar -Pcoverage and mvn -B package --file pom.xml
+#      run: mvn sonar:sonar -Pcoverage and mvn -B package --file pom.xml
 
