--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-server.port=8090
+server.port=${PORT:8090}
 
 ############### TEST  ##############
 #spring.datasource.platform=postgres
@@ -7,7 +7,7 @@ server.port=8090
 #spring.datasource.username=postgres
 #spring.datasource.password=postgres
 
-
+#java.runtime.version=11
 ############### DEV   ##############
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:mem:carsdb
