--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,17 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.port=${PORT:8090}
 
-############### TEST  ##############
-#spring.datasource.platform=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/carsdb
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-
-#java.runtime.version=11
-############### DEV   ##############
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:mem:carsdb
-#spring.datasource.url=jdbc:h2:file:C://jome.clopez//carsdb
+#spring.datasource.url=jdbc:h2:mem:desadb
+spring.datasource.url=jdbc:h2:file:C://Users//aldan//cryptodb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 #para entrar desde un browser a http://localhost:8090/h2-console
 spring.h2.console.enabled=true
-
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
