--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.societegenerale.commons</groupId>
+			<artifactId>arch-unit-maven-plugin</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
