--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
 		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.organization>desarrolloapp</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+		<sonar.language>java</sonar.language>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+		<sonar.sources>src/main</sonar.sources>
+		<sonar.tests>src/test</sonar.tests>
+		<sonar.java.binaries>target/classes</sonar.java.binaries>
+		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
 	<dependencies>
@@ -108,12 +115,32 @@
 			<artifactId>arch-unit-maven-plugin</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+	       	<dependency>
+			 <groupId>junit</groupId>
+			 <artifactId>junit</artifactId>
+			 <version>4.13.1</version>
+			 <scope>test</scope>
+	       </dependency>
 	</dependencies>
 
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 		<plugins>
+			<plugin>
+			       <groupId>org.apache.maven.plugins</groupId>
+			       <artifactId>maven-compiler-plugin</artifactId>
+			       <version>3.1</version>
+			       <configuration>
+					 <source>1.8</source>
+					 <target>1.8</target>
+			       </configuration>
+		     	</plugin>
+		      	<plugin>
+			       <groupId>org.sonarsource.scanner.maven</groupId>
+			       <artifactId>sonar-maven-plugin</artifactId>
+			       <version>3.7.0.1746</version>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
