--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,12 @@
 		<sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.organization>desarrolloapp</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-		<sonar.language>java</sonar.language>
+
+		<jacoco.version>0.8.6</jacoco.version>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-		<sonar.sources>src/main</sonar.sources>
-		<sonar.tests>src/test</sonar.tests>
-		<sonar.java.binaries>target/classes</sonar.java.binaries>
-		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+		<sonar.language>java</sonar.language>
 	</properties>
 
 	<dependencies>
@@ -115,12 +114,11 @@
 			<artifactId>arch-unit-maven-plugin</artifactId>
 			<version>2.9.2</version>
 		</dependency>
-	       	<dependency>
-			 <groupId>junit</groupId>
-			 <artifactId>junit</artifactId>
-			 <version>4.13.1</version>
-			 <scope>test</scope>
-	       </dependency>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -128,18 +126,24 @@
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 		<plugins>
 			<plugin>
-			       <groupId>org.apache.maven.plugins</groupId>
-			       <artifactId>maven-compiler-plugin</artifactId>
-			       <version>3.1</version>
-			       <configuration>
-					 <source>1.8</source>
-					 <target>1.8</target>
-			       </configuration>
-		     	</plugin>
-		      	<plugin>
-			       <groupId>org.sonarsource.scanner.maven</groupId>
-			       <artifactId>sonar-maven-plugin</artifactId>
-			       <version>3.7.0.1746</version>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
