--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.port=${PORT:8090}
 
-
+redis.port=${PORT:6379}
+spring.redis.sentinel.master=mymaster
+spring.redis.password=
+spring.redis.sentinel.nodes=localhost:5000
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:mem:carsdb
 #spring.datasource.url=jdbc:h2:mem:desadb
